--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -49,6 +49,14 @@ layout: base
 {%- else -%}
 <div class="layout--page js-page-root">
 {%- endif -%}
+  
+  <div style="text-align: center;">
+    <a href="http://hits.dwyl.com/{{ site.url | remove_first: 'https://' | remove_first: 'http://' }}{{ page.url }}"
+      target="_blank">
+      <img
+        src="http://hits.dwyl.com/{{ site.url | remove_first: 'https://' | remove_first: 'http://' }}{{ page.url }}.svg" />
+    </a>
+  </div>
 
     {%- assign _page_main_class = 'page__main js-page-main' -%}
     {%- if _page_mode == 'immersive' -%}
