--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@ articles:
 <div class="layout--home">
   {%- include paginator.html -%}
 </div>
-<div style="text-align: center;">
+<div style="text-align: left;">
   <a
     href="http://hits.dwyl.com/{{ site.url | remove_first: 'https://' | remove_first: 'http://' }}{{ page.url }}"
     target="_blank"
