--- a/_sass/common/_reset.scss
+++ b/_sass/common/_reset.scss
@@ -177,12 +177,12 @@ input {
 ::-webkit-scrollbar{
   width: 0.4rem;
   height: 0.2rem;
-  background-color: #121212;
+  background-color: #FFFFFF;
   
 }
 ::-webkit-scrollbar-thumb{
   border-radius: 0.4rem;
-  background-color: #ff006a;
+  background-color: #000000;
 }
 
 ::-webkit-scrollbar-track:horizontal{
