--- a/_sass/common/_reset.scss
+++ b/_sass/common/_reset.scss
@@ -177,7 +177,7 @@ input {
 ::-webkit-scrollbar{
   width: 0.4rem;
   height: 0.2rem;
-  background-color: #FFFFFF;
+  background-color: #000000;
   
 }
 ::-webkit-scrollbar-thumb{
@@ -186,5 +186,5 @@ input {
 }
 
 ::-webkit-scrollbar-track:horizontal{
-  background-color: #000000;
+  background-color: #ffffff;
 }
