--- a/_sass/common/_reset.scss
+++ b/_sass/common/_reset.scss
@@ -182,9 +182,9 @@ input {
 }
 ::-webkit-scrollbar-thumb{
   border-radius: 0.4rem;
-  background-color: #000000;
+  background-color: #ff006a;
 }
 
 ::-webkit-scrollbar-track:horizontal{
-  background-color: #ffffff;
+  background-color: #000000;
 }
