--- a/_sass/common/_reset.scss
+++ b/_sass/common/_reset.scss
@@ -182,7 +182,7 @@ input {
 }
 ::-webkit-scrollbar-thumb{
   border-radius: 0.4rem;
-  background-color: #ff006a;
+  background-color: #000000;
 }
 
 ::-webkit-scrollbar-track:horizontal{
