--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -270,7 +270,7 @@ layout: base
 {%- include pageview.html -%}
 
 {% if page.background %}
-<header class="masthead" style="background-image: url('/blog')">
+<header class="masthead" style="background-image: url('/')">
    {% else %}
    <header class="masthead random_BG">
    <script src="/assets/customJS/randomBgImg.js"></script>
