--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,11 @@
-
 <footer class="footer py-4 js-page-footer">
   <div class="main">
 
     {%- assign _site_author = site.author -%}
     {%- if _site_author.type == 'organization' -%}
-      {%- assign _site_author_itemtype = 'http://schema.org/Organization' -%}
+    {%- assign _site_author_itemtype = 'http://schema.org/Organization' -%}
     {%- else -%}
-      {%- assign _site_author_itemtype = 'http://schema.org/Person' -%}
+    {%- assign _site_author_itemtype = 'http://schema.org/Person' -%}
     {%- endif -%}
 
     <div itemscope itemtype="{{ _site_author_itemtype }}">
@@ -16,7 +15,7 @@
       {%- assign _site_author_url = __return -%}
       <meta itemprop="url" content="{{ _site_author_url }}">
       {%- if _site_author.bio -%}
-        <meta itemprop="description" content="{{ _site_author.bio }}">
+      <meta itemprop="description" content="{{ _site_author.bio }}">
       {%- endif -%}
       <div class="footer__author-links">
         {%- include author-links.html author=_site_author -%}
@@ -28,7 +27,7 @@
       <div>
         {%- include snippets/get-locale-string.html key='COPYRIGHT_DATES' -%}
         {%- assign _locale_copyright_dates = __return -%}
-        © {{ site.title }} blog {{ _locale_copyright_dates }},
+        © {{ site.title }} blog
       </div>
     </div>
   </div>
